--- a/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
@@ -3,7 +3,7 @@
 
 {% block components %}
 	{{ parent() }}
-	
+
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-button/paper-button.html') }}">
 {% endblock %}
 
@@ -14,22 +14,22 @@
 
 {% block content %}
 	{{ parent() }}
-	
+
 	{% for mission in missions %}
 		<div class="card" vertical layout>
 			<paper-shadow z="1"></paper-shadow>
 			<div class="card-{{ mission.team }}" horizontal layout center justified wrap>
-				<div class="card-section" style="margin-left: 10px;" vertical layout flex>
+				<div class="card-section" style="margin-left: 10px;" flex>
 					<h2>{{ mission.title }}</h2>
 				</div>
-				<div class="card-section" vertical layout flex>
+				<div class="card-section" flex>
 					<p><strong>Game:</strong> {{ mission.game }}</p>
 					<p><strong>Team:</strong> {{ mission.team }}</p>
 				</div>
-				<div class="card-section" vertical layout flex>
+				<div class="card-section" flex>
 					<p><strong>Post date:</strong> {{ mission.postdate }}</p>
 				</div>
-				<div class="card-section" vertical layout flex>
+				<div class="card-section" flex>
 					<a href="{{ path('hvz_admin_mission_edit', {'id': mission.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a>
 					<a href="{{ path('hvz_admin_mission_delete', {'id': mission.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a>
 				</div>
