--- a/src/Hvz/GameBundle/Resources/views/Admin/profiles.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/profiles.html.twig
@@ -3,7 +3,7 @@
 
 {% block components %}
 	{{ parent() }}
-	
+
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-button/paper-button.html') }}">
 {% endblock %}
 
@@ -13,19 +13,19 @@
 
 {% block content %}
 	{{ parent() }}
-	
+
 	{% for profile in profiles %}
 		<div class="card card-{{ profile.team }}" horizontal layout justified wrap>
 			<paper-shadow z="1"></paper-shadow>
-			<div class="card-section" vertical layout flex>
+			<div class="card-section" flex>
 				<p><strong>User:</strong> {{ profile.user }}</p>
 				<p><strong>Active:</strong> {{ profile.active }}</p>
 			</div>
-			<div class="card-section" vertical layout flex>
+			<div class="card-section" flex>
 				<p><strong>Game:</strong> {{ profile.game }}</p>
 				<p><strong>Clan:</strong> {{ profile.clan | default('none') }}</p>
 			</div>
-			<div class="card-section" vertical layout flex>
+			<div class="card-section" flex>
 				<p><strong># Tagged:</strong> {{ profile.numberTagged }}</p>
 				<p><strong>Team:</strong> {{ profile.team }}</p>
 			</div>
