--- a/src/Hvz/GameBundle/Resources/views/Admin/edit_profile.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/edit_profile.html.twig
@@ -3,7 +3,7 @@
 
 {% block components %}
 	{{ parent() }}
-	
+
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-input/paper-input.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-checkbox/paper-checkbox.html') }}">
@@ -16,7 +16,7 @@
 
 {% block content %}
 	{{ parent() }}
-	
+
 	<div class="card">
 		<paper-shadow z="1"></paper-shadow>
 		<div class="card-internal" vertical layout center>
@@ -27,8 +27,7 @@
 				<paper-radio-button label="Human"></paper-radio-button>
 				<paper-radio-button label="Zombie"></paper-radio-button>
 			</paper-radio-group>
-			<p><strong>Clan:</strong></p>
-			<paper-input id="p-clan" label="Clan"></paper-input>
+			<paper-input floatinglabel id="p-clan" label="Clan"></paper-input>
 			<paper-button id="fake-submit" label="Submit" raisedButton></paper-button>
 		</div>
 	</div>
@@ -38,20 +37,20 @@
 	<div id="internal-form">
 		{{ form(form) }}
 	</div>
-	
+
 	{{ parent() }}
-	
+
 	<script>
 		document.addEventListener('polymer-ready', function() {
 			$("#p-active").prop("checked", $("#form_active").prop("checked"));
 			$("#p-team").prop("selected", $("#form_team").val());
 			$("#p-clan").val($("#form_clan").val());
 		});
-		
-		$(function() {		
+
+		$(function() {
 			$("#fake-submit").click(function() {
 				var error = false;
-				
+
 				if(error) {
 					alert("There are problems with your input.");
 				}
@@ -59,7 +58,7 @@
 					$("#form_active").prop("checked", $("#p-active").prop("checked"));
 					$("#form_team").val($("#p-team").prop("selected"));
 					$("#form_clan").val($("#p-clan").val());
-					
+
 					$("#form_save").click();
 				}
 			});
