--- a/src/Hvz/GameBundle/Resources/views/Admin/edit_rule.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/edit_rule.html.twig
@@ -3,7 +3,7 @@
 
 {% block components %}
 	{{ parent() }}
-	
+
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-input/paper-input.html') }}">
 {% endblock %}
@@ -14,16 +14,13 @@
 
 {% block content %}
 	{{ parent() }}
-	
+
 	<div class="card">
 		<paper-shadow z="1"></paper-shadow>
 		<div class="card-internal" vertical layout center>
-			<p><strong>Section Title:</strong></p>
-			<paper-input id="p-title" label="Title"></paper-input>
-			<p><strong>Section Position</strong></p>
-			<paper-input id="p-position" label="Position" style="width: 100px;" validate="^[0-9]*$"></paper-input>
-			<p><strong>Body</strong></p>
-			<paper-input multiline id="p-body" style="width: 100%;" label="Body"></paper-input>
+			<paper-input floatinglabel id="p-title" label="Title"></paper-input>
+			<paper-input floatinglabel id="p-position" label="Position" style="width: 100px;" validate="^[0-9]*$"></paper-input>
+			<paper-input multiline floatinglabel id="p-body" style="width: 100%;" label="Body"></paper-input>
 			<paper-button id="fake-submit" label="Submit" raisedButton></paper-button>
 		</div>
 	</div>
@@ -33,20 +30,20 @@
 	<div id="internal-form">
 		{{ form(form) }}
 	</div>
-	
+
 	{{ parent() }}
-	
+
 	<script>
 		document.addEventListener('polymer-ready', function() {
 			$("#p-title").val($("#form_title").val());
 			$("#p-position").val($("#form_position").val());
 			$("#p-body").val($("#form_body").val());
 		});
-		
-		$(function() {		
+
+		$(function() {
 			$("#fake-submit").click(function() {
 				var error = false;
-				
+
 				if(error) {
 					alert("There are problems with your input.");
 				}
@@ -54,7 +51,7 @@
 					$("#form_title").val($("#p-title").val());
 					$("#form_position").val($("#p-position").val());
 					$("#form_body").val($("#p-body").val());
-					
+
 					$("#form_save").click();
 				}
 			});
