--- a/src/Hvz/GameBundle/Resources/views/Admin/edit_user.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/edit_user.html.twig
@@ -3,7 +3,7 @@
 
 {% block components %}
 	{{ parent() }}
-	
+
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-input/paper-input.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/components/paper-checkbox/paper-checkbox.html') }}">
@@ -15,16 +15,13 @@
 
 {% block content %}
 	{{ parent() }}
-	
+
 	<div class="card">
 		<paper-shadow z="1"></paper-shadow>
 		<div class="card-internal" vertical layout center>
-			<p><strong>Full Name:</strong></p>
-			<paper-input id="p-fullname" label="Full Name"></paper-input>
-			<p><strong>Email:</strong></p>
-			<paper-input id="p-email" label="Email"></paper-input>
-			<p><strong>Role:</strong> <small class="light">ROLE_USER, ROLE_ADMIN, or ROLE_SUPER_ADMIN</small></p>
-			<paper-input id="p-role" label="Role"></paper-input>
+			<paper-input floatingLabel id="p-fullname" label="Full Name"></paper-input>
+			<paper-input floatingLabel id="p-email" label="Email"></paper-input>
+			<paper-input floatingLabel id="p-role" label="Role"></paper-input>
 			<paper-button id="fake-submit" label="Submit" raisedButton></paper-button>
 		</div>
 	</div>
@@ -34,20 +31,20 @@
 	<div id="internal-form">
 		{{ form(form) }}
 	</div>
-	
+
 	{{ parent() }}
-	
+
 	<script>
 		document.addEventListener('polymer-ready', function() {
 			$("#p-fullname").val($("#form_fullname").val());
 			$("#p-email").val($("#form_email").val());
 			$("#p-role").val($("#form_roles_0").val());
 		});
-		
-		$(function() {		
+
+		$(function() {
 			$("#fake-submit").click(function() {
 				var error = false;
-				
+
 				if(error) {
 					alert("There are problems with your input.");
 				}
@@ -55,7 +52,7 @@
 					$("#form_fullname").val($("#p-fullname").val());
 					$("#form_email").val($("#p-email").val());
 					$("#form_roles_0").val($("#p-role").val());
-					
+
 					$("#form_save").click();
 				}
 			});
