--- a/src/Hvz/GameBundle/Resources/views/Game/rules.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/rules.html.twig
@@ -24,7 +24,7 @@
 		<div class="card">
 			<paper-shadow z="1"></paper-shadow>
 			<div class="card-internal">
-				<a id="rule-{{ loop.index }}"><h2 class="header">{{ rule.title }}</h2>
+				<a id="rule-{{ loop.index }}"><h2 class="header">{{ rule.title }}</h2></a>
 				<div>
 					{{ rule.body | raw }}
 				</div>
