fixing some more ui bugs

--- a/src/Hvz/GameBundle/Resources/views/Game/rules.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/rules.html.twig
@@ -15,7 +15,7 @@
 		<div class="card-internal">
 			<h3 class="header">Jump to section:</h3>
 			{% for rule in rules %}
-				<a href="#rule-{{ loop.index }}"><paper-button label="{{ rule.title }}"></paper-button></a>
+				<p><a href="#rule-{{ loop.index }}"><paper-button label="{{ rule.title }}"></paper-button></a></p>
 			{% endfor %}
 		</div>
 	</div>
