--- a/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/players.html.twig
@@ -38,13 +38,20 @@
 				<div class="card" style="width: 100px; height: 100px;" vertical layout center center-justified>
 					<paper-shadow z="2"></paper-shadow>
 					<div class="card-internal">
-						<img src="{{ player.avatar | default('holder.js/100x100') }}" alt="avatar" width="100" height="100">
+						<img src="{{ player.avatar | default('holder.js/100x100') }}" alt="avatar" width="100px" height="100px">
 					</div>
 				</div>
 				<div class="player-info card-section">
 					<h3 class="header" style="color: black;">{{ player.fullname }}</h3>
 					<p><strong>Tags: </strong> {{ player.tags }}</p>
 					<p><strong>Clan:</strong> {{ player.clan | default('none') }}</p>
+				</div>
+				<div class="player-info card-section" horizontal layout wrap>
+					{% for badge in player.badges %}
+						<img src="{{ asset('bundles/hvzgame/images/badges/' ~ badge.image) }}"
+							alt="{{ badge.name }} badge" title="{{ badge.name }}"
+							width="50px" height="50px">
+					{% endfor %}
 				</div>
 			</div>
 		</div>
