--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -10,6 +10,7 @@
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-menu/core-submenu.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-item/core-item.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-shadow/paper-shadow.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-toast/paper-toast.html') }}">
 {% endblock %}
 
 {% block body %}
@@ -56,6 +57,11 @@
 			{% endblock %}
 		</div>
 	</core-scaffold>
+
+	{% for toast in app.session.flashbang.get('page.toast') %}
+		<paper-toast id="page-toast-{{ loop.index0 }}" text="{{ toast }}">
+		</paper-toast>
+	{% endfor %}
 {% endblock %}
 
 {% block body_javascripts %}
@@ -97,5 +103,11 @@
 				});
 			{% endif %}
 		});
+
+		{% for toast in app.session.flashbang.get('page.toast') %}
+			window.addEventListener('polymer-ready', function() {
+				document.querySelector('#page-toast-{{ loop.index0 }}').show();
+			});
+		{% endfor %}
 	</script>
 {% endblock %}
