--- a/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
@@ -5,6 +5,7 @@
 	{{ parent() }}
 
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-tooltip/core-tooltip.html') }}">
 {% endblock %}
 
 {% block toolbar %}
@@ -26,8 +27,18 @@
 				<p><strong>Team:</strong> {{ profile.team }}</p>
 				<p><strong>Clan:</strong> {{ profile.clan | default('none') }}</p>
 			</div>
+			<div class="card-section" horizontal layout wrap>
+				{% for badge in profile.badges %}
+					<core-tooltip label="{{ badge.name }}">
+						<img src="{{ asset('bundles/hvzgame/images/badges/' ~ badge.image) }}"
+							alt="{{ badge.name }} badge"
+							width="50" height="50">
+					</core-tooltip>
+				{% endfor %}
+			</div>
 			<div class="card-section" vertical layout flex>
 				<p><a href="{{ path('hvz_admin_profile_edit', {'id': profile.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a></p>
+				<p><a href="{{ path('hvz_admin_profile_give_badge', {'id': profile.id}) }}"><paper-button label="Give Badge" raisedButton></paper-button></a></p>
 				<p><a href="{{ path('hvz_admin_profile_delete', {'id': profile.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a></p>
 			</div>
 		</div>
