--- a/src/Hvz/GameBundle/Resources/views/base.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/base.html.twig
@@ -18,6 +18,7 @@
 
 	{% block javascripts %}
 		<script src="{{ asset('bundles/hvzgame/bower_components/platform/platform.js') }}"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 	{% endblock %}
 
 	{% block components %}
