ripples! probably won't keep, but oh well

--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -11,6 +11,7 @@
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-item/core-item.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-shadow/paper-shadow.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-toast/paper-toast.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-ripple/paper-ripple.html') }}">
 {% endblock %}
 
 {% block body %}
