--- a/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
@@ -17,6 +17,18 @@
 
 	<div class="card" vertical layout>
 		<paper-shadow z="1"></paper-shadow>
+		<div horizontal layout wrap>
+			{% if profile.avatar %}
+				<img src="{{ asset(profile.avatar) }}" alt="avatar" class="avatar">
+			{% else %}
+				<img src="holder.js/100x100" alt="avatar" class="avatar">
+			{% endif %}
+			<p>
+				<a href="{{ path('hvz_admin_profile_avatar_change', {'id': profile.id}) }}">
+					<paper-button label="Change Avatar" raisedButton></paper-button>
+				</a>
+			</p>
+		</div>
 		<div horizontal layout justified wrap>
 			<div class="card-section" vertical layout flex>
 				<p><strong>User:</strong> {{ profile.user }}</p>
@@ -41,35 +53,23 @@
 				<p><a href="{{ path('hvz_admin_profile_delete', {'id': profile.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a></p>
 			</div>
 		</div>
-		<p><strong>Player ID:</strong> {{ profile.player_id }}</p>
-		<p><strong>ID Tags:</strong></p>
-		<ul>
-			{% for id_tag in profile.id_tags %}
-				<li>{% if id_tag.active == false %}<strike>{% endif %}{{ id_tag.data }}{% if id_tag.active == false %}</strike>{% endif %}</li>
-			{% endfor %}
-		</ul>
-		<a href="{{ path('hvz_admin_profile_add_tag', {'id': profile.id}) }}"><paper-button label="New ID Tag" raisedButton></paper-button></a>
-	</div>
-
-	{% for profile in profiles %}
-		<div class="card card-{{ profile.team }}" horizontal layout justified wrap>
-			<paper-shadow z="1"></paper-shadow>
-			<div class="card-section" vertical layout flex>
-				<p><strong>User:</strong> {{ profile.user }}</p>
-				<p><strong>Active:</strong> {{ profile.active }}</p>
-			</div>
-			<div class="card-section" vertical layout flex>
-				<p><strong>Game:</strong> {{ profile.game }}</p>
-			</div>
-			<div class="card-section" vertical layout flex>
-				<p><strong># Tagged:</strong> {{ profile.numberTagged }}</p>
-				<p><strong>Team:</strong> {{ profile.team }}</p>
-			</div>
-			<div class="card-section" vertical layout flex>
-				<a href="{{ path('hvz_admin_profile_view', {'id': profile.id}) }}"><paper-button label="View" raisedButton></paper-button></a>
-				<a href="{{ path('hvz_admin_profile_edit', {'id': profile.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a>
-				<a href="{{ path('hvz_admin_profile_delete', {'id': profile.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a>
+		<div horizontal layout wrap>
+			<div class="card-section">
+				<p><strong>Player ID:</strong> {{ profile.player_id }}</p>
+				<p><strong>ID Tags:</strong></p>
+				<ul>
+					{% for id_tag in profile.id_tags %}
+						<li>{% if id_tag.active == false %}<strike>{% endif %}{{ id_tag.data }}{% if id_tag.active == false %}</strike>{% endif %}</li>
+					{% endfor %}
+				</ul>
+				<p><a href="{{ path('hvz_admin_profile_add_tag', {'id': profile.id}) }}"><paper-button label="New ID Tag" raisedButton></paper-button></a></p>
 			</div>
 		</div>
-	{% endfor %}
+	</div>
+{% endblock %}
+
+{% block body_javascripts %}
+	{{ parent() }}
+
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
 {% endblock %}
