--- a/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
@@ -35,7 +35,12 @@
 		{% if loop.index is divisibleby(2) %}
 			<br style="clear:both">
 		{% endif %}
+
+		{% if loop.index is divisibleby(8) %}
+			<div class="card-spacer"></div>
+		{% endif %}
 	{% endfor %}
+
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
 </body>
