--- a/src/Hvz/GameBundle/Resources/views/Admin/games.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/games.html.twig
@@ -6,6 +6,8 @@
 
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-icon-button/core-icon-button.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog-transition.html') }}">
 {% endblock %}
 
 {% block toolbar %}
@@ -44,9 +46,34 @@
 				</div>
 				<div class="card-section" vertical layout flex>
 					<a href="{{ path('hvz_admin_game_edit', {'id': game.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a>
-					<a href="{{ path('hvz_admin_game_delete', {'id': game.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a>
+					<a href="#" onclick="showDeleteDialog('{{ game.startDate }}', '{{ path('hvz_admin_game_delete', {'id': game.id}) }}')">
+						<paper-button label="Delete" raisedButton></paper-button>
+					</a>
 				</div>
 			</div>
 		</div>
 	{% endfor %}
+{% endblock %}
+
+{% block body_javascripts %}
+	<paper-dialog id="delete-dialog" heading="Delete" transition="paper-dialog-transition-center">
+		<p>Are you sure you want to delete the game <span id="delete-id">ERROR</span></p>
+
+		<paper-button label="Cancel" affirmative></paper-button>
+		<paper-button id="delete-button" label="Delete" affirmative autofocus></paper-button>
+	</paper-dialog>
+
+	{{ parent() }}
+
+	<script>
+		function showDeleteDialog(game, path) {
+			$("#delete-id").html(game);
+			$("#delete-button").click(function() {
+				window.location = path;
+			});
+
+			var dialog = document.querySelector('#delete-dialog');
+			dialog.toggle();
+		}
+	</script>
 {% endblock %}
