--- a/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/missions.html.twig
@@ -5,6 +5,8 @@
 	{{ parent() }}
 
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog-transition.html') }}">
 {% endblock %}
 
 {% block toolbar %}
@@ -31,7 +33,9 @@
 				</div>
 				<div class="card-section" flex>
 					<a href="{{ path('hvz_admin_mission_edit', {'id': mission.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a>
-					<a href="{{ path('hvz_admin_mission_delete', {'id': mission.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a>
+					<a href="#" onclick="showDeleteDialog('{{ mission.title | e('js') }}', '{{ path('hvz_admin_mission_delete', {'id': mission.id}) }}')">
+						<paper-button label="Delete" raisedButton></paper-button>
+					</a>
 				</div>
 			</div>
 			<div style="margin-top: 20px;">
@@ -39,4 +43,27 @@
 			</div>
 		</div>
 	{% endfor %}
+{% endblock %}
+
+{% block body_javascripts %}
+	<paper-dialog id="delete-dialog" heading="Delete" transition="paper-dialog-transition-center">
+		<p>Are you sure you want to delete the mission <span id="delete-id">ERROR</span></p>
+
+		<paper-button label="Cancel" affirmative></paper-button>
+		<paper-button id="delete-button" label="Delete" affirmative autofocus></paper-button>
+	</paper-dialog>
+
+	{{ parent() }}
+
+	<script>
+		function showDeleteDialog(mission, path) {
+			$("#delete-id").html(mission);
+			$("#delete-button").click(function() {
+				window.location = path;
+			});
+
+			var dialog = document.querySelector('#delete-dialog');
+			dialog.toggle();
+		}
+	</script>
 {% endblock %}
