--- a/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/view_profile.html.twig
@@ -6,6 +6,8 @@
 
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-button/paper-button.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-tooltip/core-tooltip.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog.html') }}">
+	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-dialog/paper-dialog-transition.html') }}">
 {% endblock %}
 
 {% block toolbar %}
@@ -56,7 +58,11 @@
 			<div class="card-section" vertical layout flex>
 				<p><a href="{{ path('hvz_admin_profile_edit', {'id': profile.id}) }}"><paper-button label="Edit" raisedButton></paper-button></a></p>
 				<p><a href="{{ path('hvz_admin_profile_give_badge', {'id': profile.id}) }}"><paper-button label="Give Badge" raisedButton></paper-button></a></p>
-				<p><a href="{{ path('hvz_admin_profile_delete', {'id': profile.id}) }}"><paper-button label="Delete" raisedButton></paper-button></a></p>
+				<p>
+					<a href="#" onclick="showDeleteDialog('{{ profile.user | e('js') }}','{{ path('hvz_admin_profile_delete', {'id': profile.id}) }}')">
+						<paper-button label="Delete" raisedButton></paper-button>
+					</a>
+				</p>
 			</div>
 		</div>
 		<div horizontal layout wrap>
@@ -76,6 +82,27 @@
 
 {% block body_javascripts %}
 	{{ parent() }}
+
+	<paper-dialog id="delete-dialog" heading="Delete" transition="paper-dialog-transition-center">
+		<p>Are you sure you want to delete the profile for <span id="delete-id">ERROR</span></p>
+
+		<paper-button label="Cancel" affirmative></paper-button>
+		<paper-button id="delete-button" label="Delete" affirmative autofocus></paper-button>
+	</paper-dialog>
+
+	{{ parent() }}
+
+	<script>
+		function showDeleteDialog(profile, path) {
+			$("#delete-id").html(profile);
+			$("#delete-button").click(function() {
+				window.location = path;
+			});
+
+			var dialog = document.querySelector('#delete-dialog');
+			dialog.toggle();
+		}
+	</script>
 
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/holder/2.3.1/holder.min.js"></script>
 {% endblock %}
