--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -9,7 +9,7 @@
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-menu/core-menu.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-menu/core-submenu.html') }}">
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/core-item/core-item.html') }}">
-	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-shadow/paper-shadow.html') }}">
+	<!-- <link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-shadow/paper-shadow.html') }}"> removed: see #25 -->
 	<link rel="import" href="{{ asset('bundles/hvzgame/bower_components/paper-toast/paper-toast.html') }}">
 {% endblock %}
 
