--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -21,26 +21,38 @@
 			<core-toolbar>HvZ</core-toolbar>
 			<core-menu theme="core-light-theme" selected="{{ navigation.selected }}">
 				{% for link in navigation.links %}
-					<core-item id="menu-{{ link.id }}" icon="{{ link.icon }}" label="{{ link.label }}"></core-item>
+					<core-item id="menu-{{ link.id }}" icon="{{ link.icon }}" label="{{ link.label }}">
+						<a href="{{ link.link }}"></a>
+					</core-item>
 				{% endfor %}
 
 				{% if navigation.admin is not null %}
 					<core-submenu icon="settings" label="Administration">
 						{% for link in navigation.admin %}
-							<core-item id="menu-admin-{{ link.id }}" icon="{{ link.icon }}" label="{{ link.label }}"></core-item>
+							<core-item id="menu-admin-{{ link.id }}" icon="{{ link.icon }}" label="{{ link.label }}">
+								<a href="{{ link.link }}"></a>
+							</core-item>
 						{% endfor %}
 					</core-submenu>
 				{% endif %}
 
 				{% if app.user %}
 					<core-submenu icon="account-box" label="{{ app.user.fullname | escape }}">
-						<core-item id="menu-profile" label="Profile"></core-item>
-						<core-item id="menu-logout" label="Logout"></core-item>
+						<core-item id="menu-profile" label="Profile">
+							<a href="{{ path('hvz_profile') }}"></a>
+						</core-item>
+						<core-item id="menu-logout" label="Logout">
+							<a href="{{ path('hvz_auth_logout', {'token': csrf_token('hvz_auth_logout')}) }}"></a>
+						</core-item>
 					</core-submenu>
 				{% else %}
 					<core-submenu icon="account-box" label="Account">
-						<core-item id="menu-login" label="Login"></core-item>
-						<core-item id="menu-register" label="Register"></core-item>
+						<core-item id="menu-login" label="Login">
+							<a href="{{ path('hvz_auth_login') }}"></a>
+						</core-item>
+						<core-item id="menu-register" label="Register">
+							<a href="{{ path('hvz_auth_register') }}"></a>
+						</core-item>
 					</core-submenu>
 				{% endif %}
 			</core-menu>
@@ -62,46 +74,4 @@
 		<paper-toast id="page-toast-{{ loop.index0 }}" text="{{ toast }}" opened="true" duration="4500">
 		</paper-toast>
 	{% endfor %}
-{% endblock %}
-
-{% block body_javascripts %}
-	{{ parent() }}
-
-	<script>
-		$(function() {
-			{% for link in navigation.links %}
-				{% if loop.index0 != navigation.selected %}
-					$("#menu-{{ link.id }}").click(function() {
-						window.location = "{{ link.link }}";
-					});
-				{% endif %}
-			{% endfor %}
-
-			{% if navigation.admin is not null %}
-				{% for link in navigation.admin %}
-					$("#menu-admin-{{ link.id }}").click(function() {
-						window.location = "{{ link.link }}";
-					});
-				{% endfor %}
-			{% endif %}
-
-			{% if app.user %}
-				$("#menu-profile").click(function() {
-					window.location = "{{ path('hvz_profile') }}";
-				});
-
-				$("#menu-logout").click(function() {
-					window.location = "{{ path('hvz_auth_logout', {'token': csrf_token('hvz_auth_logout')}) }}";
-				});
-			{% else %}
-				$("#menu-login").click(function() {
-					window.location = "{{ path('hvz_auth_login') }}";
-				});
-
-				$("#menu-register").click(function() {
-					window.location = "{{ path('hvz_auth_register') }}";
-				});
-			{% endif %}
-		});
-	</script>
 {% endblock %}
