--- a/src/Hvz/GameBundle/Resources/views/page.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/page.html.twig
@@ -18,7 +18,7 @@
 
 	<core-scaffold>
 		<core-header-panel navigation flex mode="seamed">
-			<core-toolbar>HvZ</core-toolbar>
+			<core-toolbar>HvZ @ RIT</core-toolbar>
 			<core-menu theme="core-light-theme" selected="{{ navigation.selected }}">
 				{% for link in navigation.links %}
 					<core-item id="menu-{{ link.id }}" icon="{{ link.icon }}" label="{{ link.label }}" onclick="window.location='{{ link.link | e('js') }}'">
