--- a/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Game/register_tag.html.twig
@@ -28,7 +28,10 @@
 		<paper-shadow z="1"></paper-shadow>
 		<div class="card-internal" vertical layout center>
 			<div>
-				<small>Enter AV codes in the victim field and the target's player id in the zombie field</small>
+				<small>
+					Enter AV codes in the victim field and the target's player id in the zombie field.
+					AVs must be used before 5PM.
+				</small>
 			</div>
 			<paper-input floatinglabel id="victim_id" label="Victim ID" {% if victim %}value="{{ victim }}"{% endif %}></paper-input>
 			<paper-input floatinglabel id="zombie_id" label="Zombie ID" {% if zombie %}value="{{ zombie }}"{% endif %}></paper-input>
