--- a/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/print.html.twig
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="{{ asset('bundles/hvzgame/css/print.css') }}">
 </head>
 <body>
-	<div class="card-spacer"></div>
+	<div class="card-spacer-half"></div>
 	{% for profile in profiles %}
 		<div class="card">
 			<div class="top">
