--- a/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
+++ b/src/Hvz/GameBundle/Resources/views/Admin/users.html.twig
@@ -65,10 +65,10 @@
 			<paper-shadow z="1"></paper-shadow>
 			<div class="card-internal" horizontal layout center wrap center-justified>
 				{% if previous_page is defined and previous_page != -1 %}
-					<a href="{{ path('hvz_admin_users', {'page': previous_page}) }}"><paper-button label="<<" raisedButton></paper-button></a>
+					<a href="{{ path('hvz_admin_users', {'page': previous_page}) }}"><paper-button label="<<"></paper-button></a>
 				{% endif %}
 				{% if next_page is defined and next_page != -1 %}
-					<a href="{{ path('hvz_admin_users', {'page': next_page}) }}"><paper-button label=">>" raisedButton></paper-button></a>
+					<a href="{{ path('hvz_admin_users', {'page': next_page}) }}"><paper-button label=">>"></paper-button></a>
 				{% endif %}
 			</div>
 		</div>
